failed try to use token for user verification

--- a/lib/discuss_web/templates/layout/root.html.heex
+++ b/lib/discuss_web/templates/layout/root.html.heex
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script>window.userToken = "<%= assigns[:user_token] %>";</script>
   </head>
   <body>
     <header>
