install phoenix-markdown, show post on new topic page

--- a/lib/discuss_web/templates/topic/new.html.heex
+++ b/lib/discuss_web/templates/topic/new.html.heex
@@ -5,4 +5,10 @@
   </div>
 
   <%= submit "Save Topic", class: "waves-effect waves-light btn blue accent-4" %>
+
 <% end %>
+
+  <p>
+    Markdown from file
+      <%= render "01.html", assigns %>
+  </p>
